changes added by tejaswini

--- a/src/app/modules/auth/components/home/home.component.html
+++ b/src/app/modules/auth/components/home/home.component.html
@@ -70,7 +70,7 @@ html {
             <li><a class="nav-link scrollto active" style="font-size: 20px;" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto " style="font-size: 20px;"  href="/auth/about">About</a></li>
             <li><a class="nav-link " style="font-size: 20px;"  href="/auth/login">Login</a></li>
-            <!-- <li><a class="nav-link " routerLink="/account/signup">Sign Up</a></li> -->
+            <li><a class="nav-link " style="font-size: 20px;" href="/auth/signUp">Sign Up</a></li>
             <!-- <li><a class="nav-link scrollto" href="#services" style="font-size: 20px;">Services</a></li> -->
             
             <li><a class="nav-link scrollto"  style="font-size: 20px;"  href="/auth/contactUs">Contact Us</a></li>
