changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget10/feeds-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget10/feeds-widget10.component.html
@@ -75,7 +75,7 @@
         <button class="btn btn-success" printSectionId="sanjay" [useExistingCss]="true" ngxPrint>print </button>
       </div>
       <div class="col-auto">
-        <button class="btn btn-primary" (click)="downloadReport()">download </button>
+        <button class="btn btn-primary" (click)="downloadReport()">Download </button>
       </div>
     </div>
 
@@ -801,7 +801,7 @@
       <button class="btn btn-success" printSectionId="sanjay" ngxPrint>print </button>
     </div>
     <div class="col-auto">
-      <button class="btn btn-primary" (click)="downloadReport()">download </button>
+      <button class="btn btn-primary" (click)="downloadReport()">Download </button>
     </div>
   </div>
 
