--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget11/feeds-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget11/feeds-widget11.component.html
@@ -54,7 +54,7 @@
           </button>
         </div>
         <div class="col-auto">
-          <button class="btn btn-primary" (click)="downloadReport()">download </button>
+          <button class="btn btn-primary" (click)="downloadReport()">Download </button>
         </div>
         <div class="col-auto">
         </div>
