--- a/src/app/pages/dealer/report/summary-report/summary-report.component.html
+++ b/src/app/pages/dealer/report/summary-report/summary-report.component.html
@@ -1,4 +1,4 @@
 <div class="card-header">
-    <b>P&L Summary Report</b>
+    <b> Daily Report</b>
 </div>
 <app-feeds-widget4></app-feeds-widget4> 
